--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "it-homework",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://marodi-mykhailo.github.io/it-incubator-homework",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,9 +13,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "~3.7.2",
     "uuid": "^8.3.0"
   },
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
