--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # production
 /build
-
+/.idea
 # misc
 .DS_Store
 .env.local
@@ -94,3 +94,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+!/.gitignore
