--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+# webStorm settings
 /.idea
 # misc
 .DS_Store
@@ -94,4 +95,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-!/.gitignore
+.idea
